fix(pk-portfolio): modified ~/components/_hero, updated h1 & p elements spacing to fit more appropriately to content.

--- a/apps/pk-portfolio/src/scss/components/_hero.scss
+++ b/apps/pk-portfolio/src/scss/components/_hero.scss
@@ -15,17 +15,18 @@
     @media (width <= variables.$breakpoint-small) { margin: 0 2.5rem; }
 
     h1 {
-      margin-top: 0;
+      margin: 0;
       font-size: 32px;
       @media (width <= variables.$breakpoint-small) {
-        margin: 1.2rem 0 0 0;
+        margin-top: 1.2rem;
         font-size: 22px;
       }
     }
 
     & > p {
+      margin-top: 0.8rem;
       line-height: 1.5rem;
-      @media (width <= variables.$breakpoint-small) { margin: 0.4rem 0 0 0; }
+      @media (width <= variables.$breakpoint-small) { margin-top: 0.4rem; }
     }
 
     & > div {
